<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1D684"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:srcCompat="@drawable/loci"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="10dp"
        android:onClick="goToLogin"
        android:text="@string/tx1m"
        android:textSize="@dimen/stxmain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tickets" />

    <Button
        android:id="@+id/book"
        android:layout_width="226dp"
        android:layout_height="65dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="400dp"
        android:onClick="goToMovie"
        android:text="@string/tx2m"
        android:textSize="@dimen/stxmain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update_profile"
        android:layout_width="226dp"
        android:layout_height="65dp"
        android:layout_marginStart="92dp"
        android:onClick="goToUpdate"
        android:text="@string/tx3m"
        android:textSize="@dimen/stxmain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/stxgr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tickets"
        android:layout_width="226dp"
        android:layout_height="65dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="10dp"
        android:onClick="showTickets"
        android:text="@string/tx4m"
        android:textSize="@dimen/stxmain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="10dp"
        android:onClick="signOut"
        android:text="@string/tx5m"
        android:textSize="@dimen/stxmain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>